# wordle-rust

./: Cargo.toml  HONOR-CODE.md  output  report.md
src/: args.rs  config.rs  json.rs  main.rs  run.rs  test_mode.rs  tui.rs  utils.rs
src/sync/: mod.rs  up.rs
