[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
serde_json = "1.0"
console = "0.15"
text_io = "0.1.12"
lazy_static = "1.4"
rand = "0.8.5"
serde = "1.0.166"
serde_derive = "1.0.166"
rayon = "1.7.0"
crossterm = { version = "0.19", features = [ "serde" ] }
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
thiserror = "1.0"

[dev-dependencies]
lazy_static = "1.4"
assert-json-diff = "2.0"
ntest = "0.9"
pretty_assertions = "1.3"
